08/26/2015
  -Added LINT read support

06/20/2015
  -Removed duplicate _buildEIPSendRRDatHeader, renamed some stuff
  -Fixed TagName length, was grabbing extra data
  -Write now reports an error if it fails

06/17/15
  -Created LGXTag object, GetTagList() now returns list of LGXTag
  -Modified read for string to accomodate custom string size data types
  -Renamed ReadStuffs/WriteStuffs to Read/Write, "STRUCT" data type renamed to "STRING"

06/15/2015
  -GetTagList() is now working.  Still could use some work though.

06/14/2015
  -Rename some TagList functions, combined TagListMessage functions, still needs work
  
06/12/2015
  -Added GetTagList function, needs some serious work though
  
04/07/2015
  -Removed some old code (open connection)
  -OpenConnection is handled in Read/Write functions, must use .SetIPAddress("192.168.1.10")

03/23/2015
  -Added ProcessorSlot.  If not in slot 0, use .SetProcessorSlot(n)

03/22/2015
  -Added check for connection in read/write functions, no longer crashes
  -Added change log

03/18/2015
  -Removed buildCIPTagRead and Write requests (now one funtion)
  
03/17/2015
  -Merged buildTagRead and Write Request into one common function called buildTagRequest
  -Cleaned up some code
  
03/16/2015
  -Reworked CIPRequest to read complex data types (specific array elements and UDT's)
  -Added ability to read a single simple array element
  
03/14/2015
  -Removed duplicate CIPTagReadRequest function (from testing)
  -Initial commit
  